Bug 238945 - 0x00007fffe957d90b in formatICalInvitationHelper (invitation=<value optimized out>, mCalendar=<value optimized out>, helper=0x7fffffffc3e0, noHtmlMode=<value optimized out>,
Summary: 0x00007fffe957d90b in formatICalInvitationHelper (invitation=<value optimized...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-27 00:01 UTC by FernandoMiguel
Modified: 2010-05-27 02:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
valgrind (367.82 KB, application/x-lzma)
2010-05-27 00:15 UTC, FernandoMiguel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FernandoMiguel 2010-05-27 00:01:11 UTC
Version:           SVN trunk (KDE 4) (using KDE 4.4.3) 
OS:                Linux

kmail crashed when opening a folder, after a crash of deleing a folder

Reproducible: Always

Steps to Reproduce:
open kmail, open a folder

started after tried to delete a thread



downstream bug report
https://bugs.launchpad.net/ubuntu/+source/kdepim/+bug/586092
Comment 1 FernandoMiguel 2010-05-27 00:15:32 UTC
Created attachment 43929 [details]
valgrind
Comment 2 Sergio Martins 2010-05-27 00:17:39 UTC
==22584==    at 0x134B490B: formatICalInvitationHelper(QString, KCal::Calendar*, KCal::InvitationFormatterHelper*, bool, KDateTime::Spec) (incidenceformatter.cpp:2178)
==22584==    by 0x134B739F: KCal::IncidenceFormatter::formatICalInvitationNoHtml(QString, KCal::Calendar*, KCal::InvitationFormatterHelper*) (incidenceformatter.cpp:2266)
==22584==    by 0x2F1FA18F: (anonymous namespace)::Formatter::format(KMail::Interface::BodyPart*, KMail::HtmlWriter*) const (text_calendar.cpp:164)
==22584==    by 0x5EB01A0: KMail::ObjectTreeParser::parseObjectTree(partNode*) (objecttreeparser.cpp:289)
==22584==    by 0x5EB0D14: KMail::ObjectTreeParser::stdChildHandling(partNode*) (objecttreeparser.cpp:1278)
==22584==    by 0x5EB0F12: KMail::ObjectTreeParser::processMultiPartAlternativeSubtype(partNode*, KMail::ProcessResult&) (objecttreeparser.cpp:1325)
==22584==    by 0x5EB08D0: KMail::ObjectTreeParser::parseObjectTree(partNode*) (objecttreeparser.cpp:318)
==22584==    by 0x5EB0D14: KMail::ObjectTreeParser::stdChildHandling(partNode*) (objecttreeparser.cpp:1278)
==22584==    by 0x5EB10C3: KMail::ObjectTreeParser::processMultiPartMixedSubtype(partNode*, KMail::ProcessResult&) (objecttreeparser.cpp:1291)
==22584==    by 0x5EB08D0: KMail::ObjectTreeParser::parseObjectTree(partNode*) (objecttreeparser.cpp:318)
==22584==    by 0x5D2DC0F: KMReaderWin::parseMsg(KMMessage*) (kmreaderwin.cpp:1612)
==22584==    by 0x5D1FB7F: KMReaderWin::displayMessage() (kmreaderwin.cpp:1536)
==22584==    by 0x5D1FD4F: KMReaderWin::updateReaderWin() (kmreaderwin.cpp:1479)
==22584==    by 0x5D311EC: KMReaderWin::qt_metacall(QMetaObject::Call, int, void**) (kmreaderwin.moc:179)
==22584==    by 0x76DCBD5: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x76D9F02: QObject::event(QEvent*) (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x6A4E39B: QApplicationPrivate::notify_helper(QObject*, QEvent*) (in /usr/lib/libQtGui.so.4.7.0)
==22584==    by 0x6A53D8C: QApplication::notify(QObject*, QEvent*) (in /usr/lib/libQtGui.so.4.7.0)
==22584==    by 0x5065925: KApplication::notify(QObject*, QEvent*) (in /usr/lib/libkdeui.so.5.4.0)
==22584==    by 0x76C822B: QCoreApplication::notifyInternal(QObject*, QEvent*) (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x76F6E91: ??? (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x76F3C53: ??? (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x106010F1: g_main_context_dispatch (in /lib/libglib-2.0.so.0.2507.0)
==22584==    by 0x10604F77: ??? (in /lib/libglib-2.0.so.0.2507.0)
==22584==    by 0x1060512B: g_main_context_iteration (in /lib/libglib-2.0.so.0.2507.0)
==22584==    by 0x76F3942: QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x6AFFA2D: ??? (in /usr/lib/libQtGui.so.4.7.0)
==22584==    by 0x76C6F61: QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x76C733B: QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x76CC348: QCoreApplication::exec() (in /usr/lib/libQtCore.so.4.7.0)
==22584==    by 0x403481: main (main.cpp:156)
==22584==  Address 0x0 is not stack'd, malloc'd or (recently) free'd
Comment 3 Allen Winter 2010-05-27 01:51:35 UTC
SVN commit 1131000 by winterz:

fix a crash that can happen when formatting an invitation with a cancel
request but the invitation is empty.
BUG: 238945
MERGE: trunk,4.4


 M  +66 -43    incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131000
Comment 4 Allen Winter 2010-05-27 01:57:15 UTC
SVN commit 1131005 by winterz:

fix a crash that can happen when formatting an invitation with a cancel
request but the invitation is empty.
BUG: 238945
MERGE: 3.5,4.4


 M  +2 -0      incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131005
Comment 5 Allen Winter 2010-05-27 02:03:09 UTC
SVN commit 1131007 by winterz:

backport SVN commit 1131005 by winterz from trunk:

fix a crash that can happen when formatting an invitation with a cancel
request but the invitation is empty.
BUG: 238945


 M  +2 -0      incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131007