backport SVN commit 1131005 by winterz from trunk:

fix a crash that can happen when formatting an invitation with a cancel
request but the invitation is empty.
BUG: 238945

svn path=/branches/KDE/4.4/kdepimlibs/; revision=1131007